# Remote-Terminal-for-MeshCore

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE.md  README.md  pyproject.toml
app/: CLAUDE.md  config.py  database.py  decoder.py  dependencies.py  event_handlers.py  main.py  models.py  packet_processor.py  radio.py  radio_sync.py  repository.py  websocket.py
app/routers/: channels.py  contacts.py  health.py  messages.py  packets.py  radio.py  settings.py  ws.py
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  api.ts  index.css  main.tsx  styles.css  types.ts  useWebSocket.ts
frontend/src/components/: ConfigModal.tsx  ContactAvatar.tsx  CrackerPanel.tsx  MessageInput.tsx  MessageList.tsx  NewMessageModal.tsx  RawPacketList.tsx  Sidebar.tsx  StatusBar.tsx
frontend/src/components/ui/: alert.tsx  sheet.tsx  sonner.tsx
frontend/src/hooks/: index.ts  useConversationMessages.ts  useRepeaterMode.ts  useUnreadCounts.ts
frontend/src/test/: contactAvatar.test.ts  messageDeduplication.test.ts  messageParser.test.ts  repeaterMode.test.ts  unreadCounts.test.ts  urlHash.test.ts  useConversationMessages.test.ts  useRepeaterMode.test.ts  websocket.test.ts
frontend/src/utils/: contactAvatar.ts  conversationState.ts  messageParser.ts  pubkey.ts  urlHash.ts
tests/: conftest.py  test_api.py  test_decoder.py  test_event_handlers.py
